chg: [ui:main] Fixed overflowing UI creating a useless X scrollbar

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -640,7 +640,7 @@ dd {
 .footerCenterText {
     padding-top:12px;
     position: absolute;
-    width:100%;
+    width: calc(100% - 21px);
     text-align:center;
 }
 
